revert 26.1.x merge into 1.21.x branch
This commit reverts "Merge branch 'version/26.1.x' into version/1.21.x"