@@ -5,14 +5,11 @@ import com.github.spotbugs.snom.SpotBugsTask
 plugins {
     id 'base'   // root is just a container, no jar
     id 'com.github.spotbugs' version '6.2.5' apply false
-    id("io.freefair.lombok") version "9.5.0" apply false
 }
 
 subprojects {
     group = 'dev.stemcraft'
     version = "1.0.0-SNAPSHOT"
-
-    apply plugin: "io.freefair.lombok"
 
     repositories {
         mavenCentral()
@@ -23,14 +20,14 @@ subprojects {
     }
 
     tasks.withType(JavaCompile).configureEach {
-        options.compilerArgs += ["-Xlint:all", "-Xlint:-processing", "-proc:full"]
+        options.compilerArgs += ["-Xlint:all", "-Xlint:-processing"]
     }
 
     plugins.withId("java") {
         apply plugin: "com.github.spotbugs"
 
         java {
-            toolchain.languageVersion = JavaLanguageVersion.of(25)
+            toolchain.languageVersion = JavaLanguageVersion.of(21)
         }
 
         tasks.withType(JavaCompile).configureEach {
